[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "duckdb>=1.4.1",
    "fastapi>=0.119.0",
    "geoalchemy2>=0.18.0",
    "geopandas>=1.1.1",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=22.0.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]
